# Helldivers2-Chinese-Helper

./: .gitignore  LICENSE  NOTICE.md  README.md  dev-start.cmd  index.html  package.json  pnpm-lock.yaml  publish-to-github.cmd  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/: ci.yml
docs/: architecture.md  code-conformance-audit.md  manual-rounds-checklist.md  windows-probe.md
src/: App.vue  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: config.rs  mod.rs  session.rs  text.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/windows/: injector.rs  integrity.rs  key_state.rs  mod.rs  target.rs
src/components/: TargetDiagnosticPanel.vue
src/composables/: useCompositionLatch.test.ts  useCompositionLatch.ts  useInputHistory.test.ts  useInputHistory.ts  useRestoreHotkey.ts
src/services/: tauriApi.test.ts  tauriApi.ts
src/types/: ipc.ts
src/utils/: hotkey.test.ts  hotkey.ts
